fix: add write permissions for auto-commit

--- a/.github/workflows/hyperloop.yml
+++ b/.github/workflows/hyperloop.yml
@@ -8,6 +8,9 @@ on:
         required: true
         default: "5x100k"
 
+permissions:
+  contents: write
+
 jobs:
   run-hyperloop:
     runs-on: ubuntu-latest
